--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<td width="447">
 		<p align="center">
 		<a href="https://tengshine.github.io/3W3D/HW3/HW3">
-		HW3.html</a>
+		HW3.html</a></td>
 	</tr>
 </table>
 
