--- a/HW3/HW3.html
+++ b/HW3/HW3.html
@@ -355,6 +355,9 @@ function onDocumentMouseDown(event) {
 	if (intersects[0].object.name === "13") alert("NO.3");
 	if (intersects[0].object.name === "14") alert("NO.4");
 	if (intersects[0].object.name === "15") alert("NO.5");
+	if (intersects[0].object.name === "16") alert("NO.6");
+	if (intersects[0].object.name === "17") alert("NO.7");
+	
   }
 
 }
