--- a/Meeting/violin/violin.html
+++ b/Meeting/violin/violin.html
@@ -32,148 +32,319 @@ body {
 <div id="info">Hierarchy Study
   <br>
   <br> 2-link arm
+  
+   <button id="throw" style="width:20%">Throw</button>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r78/three.min.js"></script>
-<script src="https://threejs.org/examples/js/controls/OrbitControls.js">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js"></script>
+<script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
 
-
-</script>
+<script src="https://rawgit.com/jyunming-chen/game3js/master/js/ccdbox.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
-
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 
 <script>
 var camera, scene, renderer;
 var controls;
 var gcontrols; // for dat-gui
 
+var rightArm1, rightArm2;
+
+var clock = new THREE.Clock();
+
+
+var ts;
+var lastPos = new THREE.Vector3();
+var keys = [
+  [0, [-40, 35, 10]],
+  [1, [-40, 55, 100]]
+];
+var T = .52;
+var gcontrols;
+var theta1 = 0,
+  theta2 = 0,
+  theta3 = 0, theta4 = 0;
+var tsphere;
+var target;
+
+var axes = [];
+var joints = [];
+var lowerArm, upperArm;
+
+var clock = new THREE.Clock();
+var ball, ballP, ballV, ballF;
+
+var ts;
+var lastPos = new THREE.Vector3();
+var keys = [
+  [0, [-20, 35, 20]],
+  [1, [20, 55, 100]]
+];
+var T = .52;
+
+$("#throw").click(function() {
+  ts = clock.getElapsedTime();
+  tsphere.material.visible = true;
+	update.release = false;
+});
+
 init();
 animate();
 
-function makeLink() {
-	oneLink = new THREE.Object3D();
-	var mesh = new THREE.Mesh(new THREE.BoxGeometry(15, 5, 5), new THREE.MeshNormalMaterial());
-	oneLink.add(mesh);
-	mesh.position.set(7.5, 0, 0);
-	return oneLink;
+////////////////////////////////////////////////////////
+// forward kinematics
+function fk(q, joints) {
+  // joint[0]: shoulder
+  // joint[1]: elbow
+  // joint[2]: hand
+  //	joints[0] = new THREE.Vector3(0,0,0);
+  var m = new THREE.Matrix4();
+
+  // from home plate
+  var localzero = new THREE.Vector3(0, 0, 0);
+  m.makeTranslation(0, 0, -15);
+  //m.multiply(new THREE.Matrix4().makeRotationY(torsoTurn));
+  m.multiply(new THREE.Matrix4().makeTranslation(-25, 100, 0));
+  localzero.applyMatrix4(m);
+  joints[0].copy(localzero);
+
+  m.multiply(new THREE.Matrix4().makeRotationZ(q[0])); // 'ZXY'
+  m.multiply(new THREE.Matrix4().makeRotationX(q[1]));
+  m.multiply(new THREE.Matrix4().makeRotationY(q[2]));
+  m.multiply(new THREE.Matrix4().makeTranslation(0, -40, 0));
+  localzero.set(0, 0, 0);
+  localzero.applyMatrix4(m);
+  joints[1].copy(localzero);
+
+  m.multiply(new THREE.Matrix4().makeRotationX(q[3]));
+  m.multiply(new THREE.Matrix4().makeTranslation(0, -40, 0));
+  localzero.set(0, 0, 0);
+  localzero.applyMatrix4(m);
+  joints[2].copy(localzero);
 }
 
-function init() {
-	scene = new THREE.Scene();
+/////////////////////////////////////////////////////////////
+// joint axis setup
+//
+function setarm() {
+  var axis = new CCD_axis(new THREE.Vector3(0, 0, 1), 0);
+  axis.limits = new THREE.Vector2(-6, 0);
+  axes.push(axis);
+  var axis = new CCD_axis(new THREE.Vector3(1, 0, 0), 0);
+  axis.limits = new THREE.Vector2(-2.5, 2.5);
+  axes.push(axis);
+  var axis = new CCD_axis(new THREE.Vector3(0, 1, 0), 0);
+  axis.limits = new THREE.Vector2(.3, .30); //,2.5); 
+  axes.push(axis);
+  var axis = new CCD_axis(new THREE.Vector3(1, 0, 0), 1);
+  axis.limits = new THREE.Vector2(-2.7, -0.01);
+  axes.push(axis);
+}
 
-	camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
-	camera.position.set(0,200,400);
-	//scene.add(camera);
-	//var directionalLight = new THREE.DirectionalLight( 0xffffff,1 );
-	//scene.add( directionalLight );
+////////////////////////////////////////////////////////////////
+
+function init() {
+  var width = window.innerWidth;
+  var height = window.innerHeight;
+
+  renderer = new THREE.WebGLRenderer({
+    antialias: true
+  });
+  renderer.setSize(width, height);
+  renderer.setClearColor(0x888888);
+
+  document.body.appendChild(renderer.domElement);
+
+  scene = new THREE.Scene();
 	light = new THREE.PointLight(0xffffff);
 	//light.intensity = 0.5;
 	light.position.set(50, 150, 150);
 	scene.add(light);
-	//light.castShadow = true;
-	var gridXZ = new THREE.GridHelper(400, 40, 'red', 'white');
-	scene.add(gridXZ);
-	var light1 = new THREE.AmbientLight( 0x202020 ); // soft white light
-	scene.add( light1 );
-	var axes = new THREE.AxisHelper(40);
-	scene.add(axes);
+  camera = new THREE.PerspectiveCamera(40, width / height, 0.1, 10000);
+  camera.position.y = 160;
+  camera.position.z = 400;
+  camera.lookAt(new THREE.Vector3(0, 0, 0));
+  scene.add(camera);
 
-	renderer = new THREE.WebGLRenderer();
-	renderer.setSize(window.innerWidth, window.innerHeight);
-	renderer.setClearColor(0x888888);
-	renderer.shadowMap.enabled = true;
-	renderer.shadowMap.type = THREE.PCFSoftShadowMap;
+  controls = new THREE.OrbitControls(camera, renderer.domElement);
+  /////////////////////////////////////////
 
-	controls = new THREE.OrbitControls(camera, renderer.domElement);
-
-	document.body.appendChild(renderer.domElement);
-	
-	///////////////////////////////////////////////////////////////
-	//var oneLink = makeLink();
-	//link1 = oneLink.clone();
-	//link2 = oneLink.clone();
-
-	//scene.add(link1);
-
-	//link1.add(link2);
-
-	///////////////////////////////
-	gcontrol = {
-	theta1: 0.01,
-	theta2: 0.01,
-	};
-
-	var gui = new dat.GUI();
-	gui.domElement.id = 'gui';
-
-	gui.add(gcontrol, 'theta1', -1.5, 1.5);
-	gui.add(gcontrol, 'theta2', -0.1, 2.35);
-
-	/////////////////////////////////////
-	var human = new THREE.Object3D();
-	
-	var head = new THREE.Mesh( new THREE.SphereGeometry( 15, 32, 32 ), new THREE.MeshLambertMaterial( {color: 0x444444} ) );
-	head.position.set(0,95,0);
-	human.add(head);
-	
-	var body = new THREE.Mesh( new THREE.CylinderGeometry( 15, 15, 80, 32 ), new THREE.MeshLambertMaterial( {color: 0x444444} ) );
+  human = new THREE.Object3D();
+  var head = new THREE.Mesh( new THREE.SphereGeometry( 15, 32, 32 ), new THREE.MeshLambertMaterial( {color: 0x444444} ) );
+  head.position.set(0,95,0);
+  human.add(head);
+  
+  var body = new THREE.Mesh( new THREE.CylinderGeometry( 15, 15, 80, 32 ), new THREE.MeshLambertMaterial( {color: 0x444444} ) );
 	body.position.set(0,40,0);
 	human.add(body);
 	
-	var rightArm1 = new THREE.Object3D();
-	var rArm1 = new THREE.Mesh( new THREE.CylinderGeometry( 5, 5, 28, 32 ), new THREE.MeshLambertMaterial( {color: 0x444444} ) );
-	rightArm1.add(rArm1);
-	rightArm1.position.set(-20,79,0);
-	rArm1.position.set(0,-14,0);
 	
-	var rightArm2 = new THREE.Object3D();
+  scene.add(human);
+  //human.position.set(0, 0, -15);
+  rightArm1 = new THREE.Object3D();
+  var rArm1 = new THREE.Mesh( new THREE.CylinderGeometry( 5, 5, 28, 32 ), new THREE.MeshLambertMaterial( {color: 0x444444} ) );
+  //upperArm = new THREE.Object3D();
+  //upperArm.add(arm);
+  rightArm1.add(rArm1);
+  rightArm1.position.set(-20,79,0);
+  rArm1.position.set(0,-14,0);
+  human.add(rightArm1);
+  
+	rightArm2 = new THREE.Object3D();
 	var rArm2 = new THREE.Mesh( new THREE.CylinderGeometry( 5, 5, 42, 32 ), new THREE.MeshLambertMaterial( {color: 0x444444} ) );
+	rightArm2.position.set(0,-14,0);
+	rightArm1.add(rightArm2);
 	rightArm2.add(rArm2);
-	rightArm2.position.set(-20,51,0);
-	rArm2.position.set(0,-21,0);
-	human.add(rightArm1);
-	human.add(rightArm2);
+	rArm2.position.set(0,-35,0);
+	//human.add(rightArm2);
 	
-	
-	var LeftArm1 = new THREE.Object3D();
+	//human.add(rightArm2);
+  //boxGeometry = new THREE.BoxGeometry(10, 40, 10);
+  //arm2 = new THREE.Mesh(boxGeometry, new THREE.MeshNormalMaterial());
+  //lowerArm = new THREE.Object3D();
+  
+  
+  //lowerArm.position.set(0, -40, 0);
+  
+  //lowerArm.add(arm2);
+  var LeftArm1 = new THREE.Object3D();
 	LeftArm1.position.set(20,79,0);
 	var lArm1=rArm1.clone();
 	LeftArm1.add(lArm1);
+	
 	lArm1.position.set(0,-14,0);
 	
 	var LeftArm2 = new THREE.Object3D();
 	LeftArm2.position.set(20,51,0);
 	var lArm2=rArm2.clone();
 	LeftArm2.add(lArm2);
-	lArm1.position.set(0,-21,0);
-	
+	lArm2.position.set(0,-21,0);
 	
 	human.add(LeftArm1);
 	human.add(LeftArm2);
 	
-	scene.add( human );
+	////////////////////////////////////////////
+	var violin = new THREE.Object3D();
+	var violin1 = new THREE.Mesh( new THREE.CylinderGeometry( 10, 10, 5, 32 ),new THREE.MeshLambertMaterial( {color: 0x444444} ));
+	violin1.position.set(10,0,0);
+	violin.add(violin1);
+	
+	var violin2 = new THREE.Mesh( new THREE.CylinderGeometry( 15, 15, 5, 32 ),new THREE.MeshLambertMaterial( {color: 0x444444} ));
+	violin2.position.set(-6,0,0);
+	violin.add(violin2);
+	
+	var violin3 = new THREE.Mesh( new THREE.CylinderGeometry( 2.5, 2.5, 60, 32 ),new THREE.MeshLambertMaterial( {color: 0x444444} )); 
+	violin3.rotation.z=Math.PI/2;
+	violin3.position.set(25,0,0);
+	violin.add(violin3);
+	var bow = new THREE.Mesh( new THREE.CylinderGeometry( 2, 2, 300, 32 ),new THREE.MeshLambertMaterial( {color: 0x444444} ));
+	violin.add( bow );
+	bow.position.set(0,4.5,0);
+	bow.rotation.y=Math.PI/2;
+	bow.rotation.z=Math.PI/2;
+	scene.add( violin );
+	violin.position.set(29,78.5,10);
+	violin.rotation.x=Math.PI/14;
+	violin.rotation.y=-Math.PI/7;
+	violin.rotation.z=-Math.PI/17;
+	
+	////////////////////////////////////////
+
+  var gridXZ = new THREE.GridHelper(100, 10);
+  gridXZ.setColors(new THREE.Color(0xff0000), new THREE.Color(0xffffff));
+  scene.add(gridXZ);
+
+  tsphere = new THREE.Mesh(new THREE.BoxGeometry(7, 7, 7), new THREE.MeshBasicMaterial({
+    wireframe: true
+  }));
+  scene.add(tsphere);
+
+  window.addEventListener('resize', onWindowResize, false);
+
+  /////////////////////////////////////////
+  target = new THREE.Vector3();
+  target.set(-20, 35, 20);
+  setarm();
+  for (var i = 0; i < 3; i++)
+    joints[i] = new THREE.Vector3();
+
+  
+}
+
+function animate() {
+  requestAnimationFrame(animate);
+  controls.update();
+  var dt = clock.getDelta();
+  update(dt);
+  render();
+}
+
+function linearTween(s, b, e) {
+  var pos = [];
+  for (var i = 0; i < 3; i++) {
+    pos.push((1 - s) * b[i] + s * e[i]);
+  }
+  return pos;
+}
+
+function keyframeInterpolate(t) {
+
+  if (ts === undefined)
+    return;
+
+  var s = (t - ts) / T;
+  if (s > 1) { // return end frame
+    target.set(keys[1][1][0], keys[1][1][1], keys[1][1][2])
+  } else {
+    var pos = linearTween(s, keys[0][1], keys[1][1]);
+    target.set(pos[0], pos[1], pos[2]);
+  }
+}
+
+function update(dt) {
+
+  update.release = update.release === undefined ? false : update.release;
+
+  keyframeInterpolate(clock.getElapsedTime());
+  tsphere.position.copy(target);
+  
+
+	//	var theta = [theta1, theta2, theta3, theta4];
+  var theta = [0, 0, 0, -1e-2];
+
+  ik_ccd(target, theta);
+  theta1 = theta[0];
+  theta2 = theta[1];
+  theta3 = theta[2];
+  theta4 = theta[3];
+
+	//////////////////////////////////////////////////////////
+  if (!update.release ) { // release
+    
+    update.release = true;
+    tsphere.material.visible = true;
+  } 
+
 }
 
 function onWindowResize() {
-	camera.aspect = window.innerWidth / window.innerHeight;
-	camera.updateProjectionMatrix();
-	renderer.setSize(window.innerWidth, window.innerHeight);
+  var width = window.innerWidth,
+    height = window.innerHeight;
+  camera.aspect = width / height;
+  camera.updateProjectionMatrix();
+  renderer.setSize(width, height);
 }
 
 
-function animate() {
+function render() {
+  rightArm1.rotation.z = theta1; //-Math.PI/6;//theta1;
+  rightArm1.rotation.x = theta2; //-Math.PI/3;//theta2;
+  rightArm1.rotation.y = theta3; //-Math.PI/3;//theta2;
+  rightArm1.rotation.order = 'ZXY';
 
-	controls.update();
+  rightArm2.rotation.x = theta4; //-Math.PI/4;//theta3;
 
-	//link1.rotation.z = gcontrol.theta1;
-	//link2.rotation.z = gcontrol.theta2;
-
-	//link2.position.set(15, 0, 0);
-
-	requestAnimationFrame(animate);
-	renderer.render(scene, camera);
+  renderer.render(scene, camera);
 }
-
-
 
 
 </script>
