--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <table border="1" width="100%">
 	<tr>
 		<td width="389">
-		<img border="0" src="" width="389" height="253"></td>
+		<img border="0" src="HW4/HW4.gif" width="389" height="253"></td>
 		<td width="446">
 		<img border="0" src="" width="435" height="246"></td>
 		<td width="446">
@@ -44,8 +44,8 @@
 	<tr>
 		<td width="389">
 		<p align="center">
-		<a href="">
-		</a></td>
+		<a href="https://tengshine.github.io/3W3D/HW4/HW4">
+		HW4.html</a></td>
 		<td width="447">
 		<p align="center">
 		<a href="">
