--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -61,7 +61,11 @@ $('#chromaticup').mousedown ( function() {
 	
 	//MIDI.noteOn(0, i++, 127, 0);
 	for(var ii=0;ii<13;ii++){
-		setTimeout(function(){ MIDI.noteOn(0, i++, 127, 0); }, 1000*60/bpm1/2);
+		setTimeout(function(){ 
+			MIDI.noteOn(0, i, 127, 0);
+			console.log(i);	
+		}, 1000*60/bpm1/2);
+		i++;
 	}
 });
 $('#chromaticup').mouseup ( function() {
