--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -64,7 +64,7 @@ $('#chromaticup').mousedown ( function() {
 		setTimeout(function(){ 
 			MIDI.noteOn(0, i, 127, 0);
 			console.log(i);	
-		}, 1000*60/bpm1/2);
+		}, 1000*60/bpm1);
 		MIDI.noteOff(0, i, 0);
 		i++;
 	}
