--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -83,7 +83,7 @@ $('#chromaticup').mouseup ( function() {
 });
 $('#chromaticdown').click ( function() {
 	//console.log ('mouse down');
-	chromaticDown
+	chromaticDown();
 	//MIDI.noteOn(0, i--, 127, 0);
 });
 $('#chromatidown').mouseup ( function() {
@@ -102,7 +102,10 @@ function chromaticUp(){　
 	if(cou<12){ 
 		t=setTimeout("chromaticUp()", 1000*60/bpm1);
 	}
-	else if(cou>=12)cou=0;
+	else if(cou>=12){
+		cou=0;
+		i--;
+	}
 }
 
 function chromaticDown(){　
@@ -116,7 +119,10 @@ function chromaticDown(){　
 	if(cou<12){ 
 		t=setTimeout("chromaticDown()", 1000*60/bpm1);
 	}
-	else if(cou>=12)cou=0;
+	else if(cou>=12){
+		cou=0;
+		i--;
+	}
 }
 
 window.onload = function () {
