--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -42,7 +42,7 @@ var t;
 var cou=0;
 function countSecond(){　
 	//x = x+1;
-	cou++;
+	//cou++;
 	var bpm1 = $('#tempo').val();
 	console.log("1");
 	myStopFunction();
