--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -56,9 +56,9 @@ function myStopFunction() {
 }
 $('#playA').mousedown ( function() {
 	console.log ('mouse down');
-	MIDI.noteOn(0, 69, 127, 2);
-	MIDI.noteOff(0, 69, -0.75);
-	//setTimeout(function(){MIDI.noteOff(0, 69, 2);},2000);
+	MIDI.noteOn(0, 69, 127, 0);
+	//MIDI.noteOff(0, 69, 0);
+	setTimeout(function(){MIDI.noteOff(0, 69, 0);},500);
 });
 $('#playA').mouseup ( function() {
 	console.log ('mouse UP')
