--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -32,7 +32,7 @@ BPM<input id='tempo' type=range min=30 max=210><span id='bpm'></span>
 <script>
 var i =69;
 var notes=[];
-
+$('#bpm').text ($('#tempo').val());
 $('#tempo').change ( function() {
 	$('#bpm').text ($(this).val());
 	var bpm1 = $('#tempo').val();
@@ -40,6 +40,7 @@ $('#tempo').change ( function() {
 	myStopFunction;
 
 });
+
 $('#example').click(function(){
 	playexample1();
 });
@@ -137,6 +138,7 @@ function playexample1(){
 }
 var j=0;
 function playMusic(){
+	var bpm1 = $('#tempo').val();
 	var note1=notes[j].note;
 	console.log(note1);
 	MIDI.noteOn(0,note1,127,0);
@@ -149,10 +151,10 @@ function playMusic(){
 		time=notes[j+1].time-notes[j].time;
 	}
 	j++;
-	if(j<notes.length-1){
+	if(j<notes.length){
 		setTimeout(function(){
 			playMusic();
-		},time*1000);
+		},time*1000*60/bpm1);
 	}
 	
 }
