--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -90,7 +90,26 @@ function playScaleUp(){
 function playScaleDown(){
 	chromaticDown();
 }
-function chromaticUp(){　
+function chromaticUp(){
+	var bpm1 = $('#tempo').val();
+	
+	console.log(i);
+	MIDI.noteOn(0,i,127,0);
+	setTimeout(function(){
+		MIDI.noteOff(0,i,0);
+		console.log(i +'off');
+	},30);
+	//var time=notes[j].time;
+	
+	i++;
+	cou=(cou+1)%13;
+	if(cou<13){
+		setTimeout(function(){
+			playMusic();
+		},1000*60/bpm1);
+	}
+	
+	/*　
 	var bpm1 = $('#tempo').val();
 	cou++;
 	console.log(i);
@@ -104,7 +123,7 @@ function chromaticUp(){　
 	else if(cou>=13){
 		cou=0;
 		i--;
-	}
+	}*/
 }
 
 function chromaticDown(){　
