--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -105,7 +105,7 @@ function chromaticUp(){
 	cou=(cou+1)%13;
 	if(cou<13){
 		setTimeout(function(){
-			playMusic();
+			chromaticUp();
 		},1000*60/bpm1);
 	}
 	
