--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -102,7 +102,7 @@ function chromaticUp(){
 	//var time=notes[j].time;
 	
 	i++;
-	
+	cou++;
 	if(cou<13){
 		setTimeout(function(){
 			chromaticUp();
@@ -142,7 +142,7 @@ function chromaticDown(){　
 	//var time=notes[j].time;
 	
 	i--;
-	
+	cou++;
 	if(cou<13){
 		setTimeout(function(){
 			chromaticUp();
