--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -145,7 +145,7 @@ function chromaticDown(){　
 	cou++;
 	if(cou<13){
 		setTimeout(function(){
-			chromaticUp();
+			chromaticDown();
 		},1000*60/bpm1);
 	}
 	else if(cou>=13){
