--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -113,21 +113,6 @@ function chromaticUp(){
 		i--;
 	}
 	
-	/*　
-	var bpm1 = $('#tempo').val();
-	cou++;
-	console.log(i);
-	MIDI.noteOn(0, i++, 127, 0);
-
-	//myStopFunction();
-	MIDI.noteOff(0, i, 0);
-	if(cou<13){
-		t=setTimeout("chromaticUp()", 1000*60/bpm1);
-	}
-	else if(cou>=13){
-		cou=0;
-		i--;
-	}*/
 }
 
 function chromaticDown(){　
@@ -179,10 +164,11 @@ function playMusic(){
 	var note1=notes[j].note;
 	console.log(note1);
 	MIDI.noteOn(0,note1,127,0);
+	var duration1 = notes[j].duration;
 	setTimeout(function(){
 		MIDI.noteOff(0,note1,0);
 		console.log(note1+'off');
-	},30);
+	},duration1*1000*60/bpm1);
 	var time=notes[j].time;
 	if(j<notes.length-1){
 		time=notes[j+1].time-notes[j].time;
