--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -92,12 +92,12 @@ function playScaleDown(){
 }
 function chromaticUp(){
 	var bpm1 = $('#tempo').val();
-	
-	console.log(i);
-	MIDI.noteOn(0,i,127,0);
+	var nn = i;
+	console.log(nn);
+	MIDI.noteOn(0,nn,127,0);
 	setTimeout(function(){
-		MIDI.noteOff(0,i--,0);
-		console.log(i +'off');
+		MIDI.noteOff(0,,0);
+		console.log(nn +'off');
 	},30);
 	//var time=notes[j].time;
 	
@@ -117,12 +117,12 @@ function chromaticUp(){
 
 function chromaticDown(){　
 	var bpm1 = $('#tempo').val();
-	
-	console.log(i);
-	MIDI.noteOn(0,i,127,0);
+	var nn = i;
+	console.log(nn);
+	MIDI.noteOn(0,nn,127,0);
 	setTimeout(function(){
-		MIDI.noteOff(0,i,0);
-		console.log(i +'off');
+		MIDI.noteOff(0,nn,0);
+		console.log(nn +'off');
 	},30);
 	//var time=notes[j].time;
 	
