--- a/Meeting/MIDI.js-master/examples/Basic.html
+++ b/Meeting/MIDI.js-master/examples/Basic.html
@@ -96,7 +96,7 @@ function chromaticUp(){
 	console.log(nn);
 	MIDI.noteOn(0,nn,127,0);
 	setTimeout(function(){
-		MIDI.noteOff(0,,0);
+		MIDI.noteOff(0,nn,0);
 		console.log(nn +'off');
 	},30);
 	//var time=notes[j].time;
