--- a/Meeting/violin/violin2.html
+++ b/Meeting/violin/violin2.html
@@ -47,9 +47,9 @@ strong {
   <br>
 BPM <input id='tempo' type="range" min=30 max=210 value = 60><span id = "bpm">60</span><br>
 <button id='string_E'>string E</button>
-<button id='string_A'>string_A</button>
+<button id='string_A'>string A</button>
 <button id='string_D'>string D</button>
-<button id='string_G'>string_G</button>
+<button id='string_G'>string G</button>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
