--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<td width="389">
 		<img border="0" src="HW4/HW4.gif" width="389" height="253"></td>
 		<td width="446">
-		<img border="0" src="" width="435" height="246"></td>
+		<img border="0" src="HW5/HW5.gif" width="435" height="246"></td>
 		<td width="446">
 		<img border="0" src="" width="444" height="251"></td>
 		
@@ -49,7 +49,7 @@
 		<td width="447">
 		<p align="center">
 		<a href="">
-		</a></td>
+		HW5.html</a></td>
 		<td width="447">
 		<p align="center">
 		<a href="">
