--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<td width="446">
 		<img border="0" src="HW5/HW5.gif" width="435" height="246"></td>
 		<td width="446">
-		<img border="0" src="" width="444" height="251"></td>
+		<img border="0" src="HW6/HW6.gif" width="444" height="251"></td>
 		
 		
 	</tr>
@@ -52,8 +52,8 @@
 		HW5.html</a></td>
 		<td width="447">
 		<p align="center">
-		<a href="">
-		</a>
+		<a href="https://docs.google.com/presentation/d/1caJAnGVjEU-80DvEjBZauCKs_xx7p55Q7mYb58GW7_s/edit?usp=sharing">
+		HW5.html</a>
 	</tr>
 </table>
 <table border="1" width="100%">
